# colorama

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  ENTERPRISE.md  LICENSE.txt  MANIFEST.in  Makefile  README-hacking.md  README.rst  README.txt  SECURITY.md  bootstrap.ps1  build.ps1  clean.ps1  pyproject.toml  release.ps1  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test-release  test-release.ps1  test.ps1  tox.ini
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  lint_python.yml  reuse.yml  test.yml
colorama/: __init__.py  ansi.py  ansi.pyi  ansitowin32.py  color.py  initialise.py  initialise.pyi  random.py  win32.py  windows_437.py  winterm.py
colorama/tests/: __init__.py  ansi_test.py  ansi_test.pyi  ansitowin32_test.py  ansitowin32_test.pyi  initialise_test.py  initialise_test.pyi  isatty_test.py  isatty_test.pyi  undrev_test.py  utils.py  utils.pyi  winterm_test.py  winterm_test.pyi
demos/: demo-cmdline-args.py  demo.bat  demo.sh  demo01.py  demo02.py  demo03.py  demo04.py  demo05.py  demo06.py  demo07.py  demo08.py  demo09-hyperlinks.py  demo09.py  fixpath.py
screenshots/: ubuntu-demo.png.license
tests/: ansi_test.py  ansitowin32_test.py  initialise_test.py  isatty_test.py  winterm_test.py
