[build-system]
requires = [
    "hatchling>=0.25.1",
]
build-backend = "hatchling.build"

[project]
name = "colorama"
description = "Cross-platform colored terminal text."
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*"
authors = [
    { name = "Jonathan Hartley", email = "tartley@tartley.com" },
]
keywords = [
    "ansi",
    "color",
    "colour",
    "crossplatform",
    "terminal",
    "text",
    "windows",
    "xplatform",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Terminals",
]
dynamic = [
    "version",
]

[project.urls]
Homepage = "https://github.com/tartley/colorama"

[tool.hatch.version]
path = "colorama/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/colorama",
    "/demos",
    "/CHANGELOG.rst",
]

[tool.hatch.build.targets.wheel]
include = [
    "/colorama/*",
]


[tool.ruff]
target-version = "py37"
#line-length = 120

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    "E",
    "W", # see: https://pypi.org/project/pycodestyle
    "F", # see: https://pypi.org/project/pyflakes
    "I", #see: https://pypi.org/project/isort/
    "S", # see: https://pypi.org/project/flake8-bandit
    "UP", # see: https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
extend-select = [
    "B",    # see: https://pypi.org/project/flake8-bugbear
    "C4",   # see: https://pypi.org/project/flake8-comprehensions
]
ignore-init-module-imports = true
unfixable = ["F401"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.codespell]
#skip = '*.py'
quiet-level = 3