[metadata]
name = colorama
author = Jonathan Hartley
author_email = tartley@tartley.com
maintainer = Arnon Yaari
license = BSD-3-Clause
license_file = LICENSE.txt
description = Cross-platform colored terminal text.
keywords =
    color
    colour
    terminal
    text
    ansi
    windows
    crossplatform
    xplatform
url = https://github.com/tartley/colorama
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Terminals

[options]
packages = colorama
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[bdist_wheel]
universal = 1

